src/objects/MediaElement__c.object
<CustomObject>
    <description>Represents the repository of media elements that can be assigned to multiple contents.</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Describes the media element stating things such as what can you see in a photograph (Ex. Child feeding a dog)</description>
        <label>Description</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DesktopFileExtension__c</fullName>
        <description>Indicates the image file extension for desktop.</description>
        <label>Desktop File Extension</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MediaElementExtensions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <description>Autocompleted/editable field based on Name and Cluster External Id for import/export purposes.</description>
        <externalId>true</externalId>
        <inlineHelpText>Autocompleted/editable field based on Name and Cluster External Id for import/export purposes.</inlineHelpText>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FileNameDesktop__c</fullName>
        <description>Indicates file name for desktop image.</description>
        <label>File Name Desktop</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FileNameMobile__c</fullName>
        <description>Indicates file name for mobile image. If it was an automatic resize it would be the desktop file name plus &quot;(mobile&quot;).</description>
        <label>File Name Mobile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FileNameTablet__c</fullName>
        <description>Indicates file name for tablet image. If it was an automatic resize it would be the desktop file name plus &quot;(tablet&quot;).</description>
        <label>File Name Tablet</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FileURLDesktop__c</fullName>
        <description>Stores the URL of the desktop file related to the media element.</description>
        <inlineHelpText>Stores the URL of the desktop file related to the media element.</inlineHelpText>
        <label>File URL Desktop</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FileURLMobile__c</fullName>
        <description>Stores the URL of the mobile file related to the media element.</description>
        <inlineHelpText>Stores the URL of the mobile file related to the media element.</inlineHelpText>
        <label>File URL Mobile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FileURLTablet__c</fullName>
        <description>Stores the URL of the tablet file related to the media element.</description>
        <inlineHelpText>Stores the URL of the tablet file related to the media element.</inlineHelpText>
        <label>File URL Tablet</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HeightDesktop__c</fullName>
        <description>Indicates image height for desktop.</description>
        <label>Height Desktop</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HeightMobile__c</fullName>
        <description>Indicates image height for mobile.</description>
        <label>Height Mobile</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HeightTablet__c</fullName>
        <description>Indicates image height for tablet.</description>
        <label>Height Tablet</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MobileFileExtension__c</fullName>
        <description>Indicates the image file extension for mobile.</description>
        <label>Mobile File Extension</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MediaElementExtensions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Manage the status of the record.</description>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TabletFileExtension__c</fullName>
        <description>Indicates the image file extension for tablet.</description>
        <inlineHelpText>Indicates the image file extension for tablet.</inlineHelpText>
        <label>Tablet File Extension</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MediaElementExtensions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>WidthDesktop__c</fullName>
        <description>Indicates image width for desktop.</description>
        <label>Width Desktop</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WidthMobile__c</fullName>
        <description>Indicates image width for mobile.</description>
        <label>Width Mobile</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WidthTablet__c</fullName>
        <description>Indicates image width for tablet.</description>
        <label>Width Tablet</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Media Element</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Media Element Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Media elements</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>MediaElement_ExternalIdRequired</fullName>
        <active>true</active>
        <description>Validates there is a value for the External Id field.</description>
        <errorConditionFormula>ISBLANK( ExternalId__c )</errorConditionFormula>
        <errorDisplayField>ExternalId__c</errorDisplayField>
        <errorMessage>You must assign a value for the External Id.</errorMessage>
    </validationRules>
</CustomObject>